Refactor CollectionUtils and JacksonUtils for improved readability and thread safety; update Sequence class constants